samples/_failures_safe/1761640371_f5e02f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6bbb700e.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_6bbb700e.c:170:17: error: expected expression at end of input
  170 |                 for (int j = 0; j < graph->node_count; j++)
      |                 ^~~
./samples/SAFE/__tmp_6bbb700e.c:170:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6bbb700e.c:170:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6bbb700e.c:170:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6bbb700e.c:170:17: error: expected declaration or statement at end of input
